# Process this file with autoconf to produce a configure script.
# File: components/lmsensors/configure.in
# CVS: $Id$

AC_INIT
AC_ARG_WITH(sensors_incdir,
            [--with-sensors_incdir=<path> Specify path to sensors includes],
            [SENSORS_INCDIR=$withval
             CFLAGS="$CFLAGS -I$withval" 
             AC_CHECK_HEADER([sensors.h],
                             [],
                             [AC_MSG_ERROR([sensors.h not found])],
                             [#include <sensors.h>])],
            [AC_MSG_ERROR([Component requires path to sensors includes])])	

AC_SUBST(SENSORS_INCDIR)
AC_CONFIG_FILES([Makefile.lmsensors])
AC_OUTPUT
