# Process this file with autoconf to produce a configure script.
# File: components/net/configure.in
# CVS: $Id$

AC_INIT
AC_ARG_WITH(mx_counters,
            [  --with-mx-counters=<path> Specify path to mx counters],
            [MXPATH=$withval],
            [AC_PATH_PROG(MXPATH, mx_counters)])
if test "$MXPATH" = ""; then
  AC_MSG_ERROR([Component requires the path to mx_counters])
fi
AC_SUBST(MXPATH)
AC_CONFIG_FILES([Makefile.mx])
AC_OUTPUT
