# Process this file with autoconf to produce a configure script.
# File: components/net/configure.in
# CVS: $Id$

AC_INIT
AC_PATH_PROG(NETPATH, ifconfig)
if test "$NETPATH" = ""; then
  AC_MSG_ERROR([Component requires the path to ifconfig])
fi
AC_SUBST(NETPATH)
AC_CONFIG_FILES([Makefile.net])
AC_OUTPUT